--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-    <script src="js/dom_cloud.js"></script>
     <link href="css/zengarden.css" rel="stylesheet" media="screen" />
     <link href="css/dom_cloud.css" rel="stylesheet" media="screen" />
 
@@ -154,5 +153,11 @@
 <div class="extra1" role="presentation"></div><div class="extra2" role="presentation"></div><div class="extra3" role="presentation"></div>
 <div class="extra4" role="presentation"></div><div class="extra5" role="presentation"></div><div class="extra6" role="presentation"></div>
   <script type="text/javascript" src="js/dom_cloud.js"></script>
+  <script type="text/javascript">
+    window.onload = function() {
+      var start = document.firstChild;
+      recursive(start);
+    };
+  </script>
   </body>
 </html>
