adds words to domcloud

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
   <script type="text/javascript" src="js/dom_cloud.js"></script>
   <script type="text/javascript">
     window.onload = function() {
-      var start = document.firstChild;
-      recursive(start);
+      var node = document.body;
+      recursive(node);
     };
   </script>
   </body>
